<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="1dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sisa.ufrpe.br.sisaandroid.HomeActivity"
    app:paddingStart="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/classes"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/grademobile"
            android:id="@+id/btnMatriculaHome"
            android:layout_weight="1"
            android:textSize="18sp" />

        <Button
            android:text="@string/generate"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/gerarmobile"
            android:id="@+id/btnRecomendacaoHome"
            android:layout_weight="1"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/frameInfos"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/cardview_light_background"
            android:layout_weight="2">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/nomeAluno"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true">
                    <TextView
                        android:text="@string/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/welcome"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:layout_weight="1" />

                    <TextView
                        android:text=" Aluno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/alunoNome"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <TextView
                    android:text="@string/expl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/infoHome1"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/nomeAluno"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="12sp" />

                <TextView
                    android:text="@string/expl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/infohome2"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/infoHome1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:text="@string/record"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/historicomobile"
            android:id="@+id/btnHistoricoHome"
            android:layout_weight="1"
            android:textSize="18sp" />

        <Button
            android:text="@string/course"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/btnGradeHome"
            android:background="@drawable/sugestaomobile"
            android:layout_weight="1"
            android:textSize="18sp" />

        <Button
            android:text="@string/suggestions"
            android:background="@drawable/anteriormobile"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/btnAnteriorHome"
            android:layout_weight="1"
            android:elevation="0dp"
            android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
